--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-  {erlyjs, "0.1.0", {git, "https://github.com/KlausTrainer/erlyjs.git"}}
+  {erlyjs, "0.1.0", {git, "https://github.com/waj/erlyjs.git"}}
 ]}.
